--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 ascii==3.6
 asgiref==3.7.2
+boto3==1.35.31
+botocore==1.35.31
 certifi==2023.11.17
 chardet==5.2.0
 charset-normalizer==3.3.2
@@ -8,14 +10,17 @@ defusedxml==0.7.1
 diff-match-patch==20230430
 Django==5.0
 django-admin-rangefilter==0.13.0
+django-autocomplete-light==3.11.0
 django-ckeditor==6.7.0
 django-cors-headers==4.3.1
 django-filter==23.5
+django-import-export==4.1.1
 django-jalali==6.0.1
 django-jalali-date==1.1.0
 django-jazzmin==2.6.0
 django-js-asset==2.2.0
 django-location-field==2.7.3
+django-storages==1.14.4
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
 drf-yasg==1.21.7
@@ -24,6 +29,7 @@ idna==3.6
 import-export==0.3.1
 inflection==0.5.1
 jdatetime==4.1.1
+jmespath==1.0.1
 MarkupPy==1.14
 mysqlclient==2.2.1
 odfpy==1.4.1
@@ -40,6 +46,7 @@ PyYAML==6.0.1
 qrcode==7.4.2
 reportlab==4.2.0
 requests==2.31.0
+s3transfer==0.10.2
 setuptools==75.0.0
 six==1.16.0
 smsir-python==1.0.7
@@ -51,6 +58,3 @@ uritemplate==4.1.1
 urllib3==2.1.0
 xlrd==2.0.1
 xlwt==1.3.0
-boto3
-django-storages
-django-import-export
