--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,12 @@ defusedxml==0.7.1
 diff-match-patch==20230430
 Django==5.0
 django-admin-rangefilter==0.13.0
+django-ajax-selects==3.0.3
+django-appconf==1.0.6
 django-autocomplete-light==3.11.0
 django-ckeditor==6.7.0
 django-cors-headers==4.3.1
+django-extensions==3.2.3
 django-filter==23.5
 django-import-export==4.1.1
 django-jalali==6.0.1
@@ -20,6 +23,8 @@ django-jalali-date==1.1.0
 django-jazzmin==2.6.0
 django-js-asset==2.2.0
 django-location-field==2.7.3
+django-search-admin-autocomplete==0.2.1
+django-select2==8.2.1
 django-storages==1.14.4
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
