--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ django-location-field==2.7.3
 django-search-admin-autocomplete==0.2.1
 django-select2==8.2.1
 django-storages==1.14.4
+django-treebeard==4.7.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
 drf-yasg==1.21.7
