--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,8 @@ django-admin-rangefilter==0.13.0
 django-ajax-selects==3.0.3
 django-appconf==1.0.6
 django-autocomplete-light==3.11.0
+django-cachalot==2.6.3
+django-cacheops==7.0.2
 django-ckeditor==6.7.0
 django-cors-headers==4.3.1
 django-extensions==3.2.3
@@ -23,6 +25,7 @@ django-jalali-date==1.1.0
 django-jazzmin==2.6.0
 django-js-asset==2.2.0
 django-location-field==2.7.3
+django-redis==5.4.0
 django-search-admin-autocomplete==0.2.1
 django-select2==8.2.1
 django-storages==1.14.4
@@ -31,6 +34,7 @@ djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
 drf-yasg==1.21.7
 et-xmlfile==1.1.0
+funcy==2.0
 idna==3.6
 import-export==0.3.1
 inflection==0.5.1
@@ -47,9 +51,11 @@ pillow==10.2.0
 PyJWT==2.8.0
 pypng==0.20220715.0
 python-dateutil==2.9.0.post0
+python-memcached==1.62
 pytz==2023.3.post1
 PyYAML==6.0.1
 qrcode==7.4.2
+redis==5.2.0
 reportlab==4.2.0
 requests==2.31.0
 s3transfer==0.10.2
