--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,7 @@ django-admin-rangefilter==0.13.0
 django-ajax-selects==3.0.3
 django-appconf==1.0.6
 django-autocomplete-light==3.11.0
-django-cachalot==2.6.3
-django-cacheops==7.0.2
+django-cachalot
 django-ckeditor==6.7.0
 django-cors-headers==4.3.1
 django-extensions==3.2.3
